Modify access rules

--- a/project.config
+++ b/project.config
@@ -7,5 +7,6 @@
 [project]
 	state = hidden
 [access "refs/*"]
-	owner = group Administrators
 	owner = group user/Chris Crump (Sirhc95)
+	read = block group Anonymous Users
+	read = block group Registered Users
