Modify access rules

--- a/project.config
+++ b/project.config
@@ -7,5 +7,6 @@
 [project]
 [access "refs/*"]
 	owner = group user/Chris Crump (Sirhc95)
+	read = group Administrators
 	read = block group Anonymous Users
 	read = block group Registered Users
