Modify access rules

--- a/project.config
+++ b/project.config
@@ -8,5 +8,6 @@
 [access "refs/*"]
 	owner = group user/Chris Crump (Sirhc95)
 	read = group Administrators
+	read = group Maintainers
 	read = block group Anonymous Users
 	read = block group Registered Users
