Modify access rules

--- a/project.config
+++ b/project.config
@@ -9,5 +9,6 @@
 	owner = group user/Chris Crump (Sirhc95)
 	read = group Administrators
 	read = group Maintainers
+	read = group Managers
 	read = block group Anonymous Users
 	read = block group Registered Users
