--- a/project.config
+++ b/project.config
@@ -1,5 +1,5 @@
 [access]
-	inheritFrom = All-Projects
+	inheritFrom = PROJECT-private
 [submit]
 	action = inherit
 [change]
@@ -7,8 +7,3 @@
 [project]
 [access "refs/*"]
 	owner = group user/Chris Crump (Sirhc95)
-	read = group Administrators
-	read = group Maintainers
-	read = group Managers
-	read = block group Anonymous Users
-	read = block group Registered Users
