Update group names

--- a/project.config
+++ b/project.config
@@ -6,4 +6,4 @@
 	privateByDefault = true
 [project]
 [access "refs/*"]
-	owner = group user/Chris Crump (Sirhc95)
+	owner = group user/Chris Crawford (Sirhc95)
